# cse576_project2

./: .gitignore  Readme.md
PanoramaSkel/: CMakeLists.txt  Makefile  Project2.cpp
PanoramaSkel/ImageLib/: CMakeLists.txt  Convert.h  Convert.inl  Convolve.cpp  Convolve.h  FileIO.h  IPLInterface.h  Image.cpp  Image.h  ImageLib.h  ImageProc.h  Makefile  Pyramid.h  Pyramid.inl  RefCntMem.cpp  Transform.cpp  Transform.h  WarpImage.h  WarpImage.inl
lpjpano/: README.txt  index.html  your_pano.ivr
test_set/: pairlist2.txt  pairlist4.txt  stitch2.tga  stitch4.tga  warp10.tga  warp11.tga
